--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -125,7 +125,7 @@ package v2.0
 * [Comparing single-group & multi-group for LDL – old PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare_oldpip.html)
 * [Comparing single-group & multi-group for LDL - new PIP combining function](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_single_multi_compare.html)
 * [Comparing different PIP combining functions](https://sq-96.github.io/multigroup_ctwas_analysis/compare_pip_func_LDL.html)
-
+* [New tissues comparing LD mismatch](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_newtissue_example.html)
 
 # Old simulation results
 
