--- a/analysis/real_data_all_tissues.Rmd
+++ b/analysis/real_data_all_tissues.Rmd
@@ -18,7 +18,7 @@ editor_options:
 5. For SCZ, the top ones are basal ganglia, cerebellum, hippocampus, hemisphere, cortex ...
 
 
-```{r}
+```{r results='asis', echo=TRUE}
 sample_size <- list("WBC-ieu-b-30" = 563946,
                     "SBP-ukb-a-360" = 317754,
                     "LDL-ukb-d-30780_irnt" = 343621,
